src/main/antlr4/fr/ensimag/deca/syntax/.antlr/DecaParser.java
// Generated from /user/9/.base/boussemy/home/Projet_GL/src/main/antlr4/fr/ensimag/deca/syntax/DecaParser.g4 by ANTLR 4.8

    import fr.ensimag.deca.tree.*;
    import java.io.PrintStream;
    import fr.ensimag.deca.tools.*;


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DecaParser extends AbstractDecaParser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, COMMENT=2, INCLUDE=3, ELSE=4, IF=5, SPACE=6, ELSEIF=7, ASM=8, CLASS=9, 
		EXTENDS=10, FALSE=11, INSTANCEOF=12, NEW=13, NULL=14, READINT=15, READFLOAT=16, 
		PRINT=17, PRINTLN=18, PRINTLNX=19, PRINTX=20, PROTECTED=21, RETURN=22, 
		THIS=23, TRUE=24, WHILE=25, LT=26, GT=27, EQEQ=28, EQUALS=29, PLUS=30, 
		MINUS=31, TIMES=32, SLASH=33, PERCENT=34, COMMA=35, OPARENT=36, CPARENT=37, 
		OBRACE=38, CBRACE=39, EXCLAM=40, SEMI=41, NEQ=42, LEQ=43, GEQ=44, AND=45, 
		OR=46, IDENT=47, FLOAT=48, DOT=49, INT=50, STRING=51, MULTI_LINE_STRING=52;
	public static final int
		RULE_prog = 0, RULE_main = 1, RULE_block = 2, RULE_list_decl = 3, RULE_decl_var_set = 4, 
		RULE_list_decl_var = 5, RULE_decl_var = 6, RULE_list_inst = 7, RULE_inst = 8, 
		RULE_if_then_else = 9, RULE_list_expr = 10, RULE_expr = 11, RULE_assign_expr = 12, 
		RULE_or_expr = 13, RULE_and_expr = 14, RULE_eq_neq_expr = 15, RULE_inequality_expr = 16, 
		RULE_sum_expr = 17, RULE_mult_expr = 18, RULE_unary_expr = 19, RULE_select_expr = 20, 
		RULE_primary_expr = 21, RULE_type = 22, RULE_literal = 23, RULE_ident = 24, 
		RULE_list_classes = 25, RULE_class_decl = 26, RULE_class_extension = 27, 
		RULE_class_body = 28, RULE_decl_field_set = 29, RULE_visibility = 30, 
		RULE_list_decl_field = 31, RULE_decl_field = 32, RULE_decl_method = 33, 
		RULE_list_params = 34, RULE_multi_line_string = 35, RULE_param = 36;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "main", "block", "list_decl", "decl_var_set", "list_decl_var", 
			"decl_var", "list_inst", "inst", "if_then_else", "list_expr", "expr", 
			"assign_expr", "or_expr", "and_expr", "eq_neq_expr", "inequality_expr", 
			"sum_expr", "mult_expr", "unary_expr", "select_expr", "primary_expr", 
			"type", "literal", "ident", "list_classes", "class_decl", "class_extension", 
			"class_body", "decl_field_set", "visibility", "list_decl_field", "decl_field", 
			"decl_method", "list_params", "multi_line_string", "param"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'else'", "'if'", "' '", null, "'asm'", "'class'", 
			"'extends'", "'false'", "'instanceof'", "'new'", "'null'", "'readInt'", 
			"'readFloat'", "'print'", "'println'", "'printlnx'", "'printx'", "'protected'", 
			"'return'", "'this'", "'true'", "'while'", "'<'", "'>'", "'=='", "'='", 
			"'+'", "'-'", "'*'", "'/'", "'%'", "','", "'('", "')'", "'{'", "'}'", 
			"'!'", "';'", "'!='", "'>='", "'<='", "'&&'", "'||'", null, null, "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "COMMENT", "INCLUDE", "ELSE", "IF", "SPACE", "ELSEIF", "ASM", 
			"CLASS", "EXTENDS", "FALSE", "INSTANCEOF", "NEW", "NULL", "READINT", 
			"READFLOAT", "PRINT", "PRINTLN", "PRINTLNX", "PRINTX", "PROTECTED", "RETURN", 
			"THIS", "TRUE", "WHILE", "LT", "GT", "EQEQ", "EQUALS", "PLUS", "MINUS", 
			"TIMES", "SLASH", "PERCENT", "COMMA", "OPARENT", "CPARENT", "OBRACE", 
			"CBRACE", "EXCLAM", "SEMI", "NEQ", "LEQ", "GEQ", "AND", "OR", "IDENT", 
			"FLOAT", "DOT", "INT", "STRING", "MULTI_LINE_STRING"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DecaParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    @Override
	    protected AbstractProgram parseProgram() {
	        return prog().tree;
	    }
	    public static SymbolTable tableSymb = new SymbolTable();

	public DecaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public AbstractProgram tree;
		public List_classesContext list_classes;
		public MainContext main;
		public List_classesContext list_classes() {
			return getRuleContext(List_classesContext.class,0);
		}
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public TerminalNode EOF() { return getToken(DecaParser.EOF, 0); }
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			((ProgContext)_localctx).list_classes = list_classes();
			setState(75);
			((ProgContext)_localctx).main = main();
			setState(76);
			match(EOF);

			            assert(((ProgContext)_localctx).list_classes.tree != null);
			            assert(((ProgContext)_localctx).main.tree != null);
			            ((ProgContext)_localctx).tree =  new Program(((ProgContext)_localctx).list_classes.tree, ((ProgContext)_localctx).main.tree);
			            setLocation(_localctx.tree, (((ProgContext)_localctx).list_classes!=null?(((ProgContext)_localctx).list_classes.start):null));
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainContext extends ParserRuleContext {
		public AbstractMain tree;
		public BlockContext block;
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_main);
		try {
			setState(83);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOF:
				enterOuterAlt(_localctx, 1);
				{

				            ((MainContext)_localctx).tree =  new EmptyMain();
				        
				}
				break;
			case OBRACE:
				enterOuterAlt(_localctx, 2);
				{
				setState(80);
				((MainContext)_localctx).block = block();

				            assert(((MainContext)_localctx).block.decls != null);
				            assert(((MainContext)_localctx).block.insts != null);
				            ((MainContext)_localctx).tree =  new Main(((MainContext)_localctx).block.decls, ((MainContext)_localctx).block.insts);
				            setLocation(_localctx.tree, (((MainContext)_localctx).block!=null?(((MainContext)_localctx).block.start):null));
				        
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public ListDeclVar decls;
		public ListInst insts;
		public List_declContext list_decl;
		public List_instContext list_inst;
		public TerminalNode OBRACE() { return getToken(DecaParser.OBRACE, 0); }
		public List_declContext list_decl() {
			return getRuleContext(List_declContext.class,0);
		}
		public List_instContext list_inst() {
			return getRuleContext(List_instContext.class,0);
		}
		public TerminalNode CBRACE() { return getToken(DecaParser.CBRACE, 0); }
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(OBRACE);
			setState(86);
			((BlockContext)_localctx).list_decl = list_decl();
			setState(87);
			((BlockContext)_localctx).list_inst = list_inst();
			setState(88);
			match(CBRACE);

			            assert(((BlockContext)_localctx).list_decl.tree != null);
			            assert(((BlockContext)_localctx).list_inst.tree != null);
			            ((BlockContext)_localctx).decls =  ((BlockContext)_localctx).list_decl.tree;
			            ((BlockContext)_localctx).insts =  ((BlockContext)_localctx).list_inst.tree;
			            
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class List_declContext extends ParserRuleContext {
		public ListDeclVar tree;
		public List<Decl_var_setContext> decl_var_set() {
			return getRuleContexts(Decl_var_setContext.class);
		}
		public Decl_var_setContext decl_var_set(int i) {
			return getRuleContext(Decl_var_setContext.class,i);
		}
		public List_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_decl; }
	}

	public final List_declContext list_decl() throws RecognitionException {
		List_declContext _localctx = new List_declContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_list_decl);

		            ((List_declContext)_localctx).tree =  new ListDeclVar();
		        
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(91);
					decl_var_set(_localctx.tree);
					}
					} 
				}
				setState(96);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Decl_var_setContext extends ParserRuleContext {
		public ListDeclVar l;
		public TypeContext type;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List_decl_varContext list_decl_var() {
			return getRuleContext(List_decl_varContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(DecaParser.SEMI, 0); }
		public Decl_var_setContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Decl_var_setContext(ParserRuleContext parent, int invokingState, ListDeclVar l) {
			super(parent, invokingState);
			this.l = l;
		}
		@Override public int getRuleIndex() { return RULE_decl_var_set; }
	}

	public final Decl_var_setContext decl_var_set(ListDeclVar l) throws RecognitionException {
		Decl_var_setContext _localctx = new Decl_var_setContext(_ctx, getState(), l);
		enterRule(_localctx, 8, RULE_decl_var_set);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			((Decl_var_setContext)_localctx).type = type();
			setState(98);
			list_decl_var(_localctx.l,((Decl_var_setContext)_localctx).type.tree);
			setState(99);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class List_decl_varContext extends ParserRuleContext {
		public ListDeclVar l;
		public AbstractIdentifier t;
		public Decl_varContext dv1;
		public Decl_varContext dv2;
		public List<Decl_varContext> decl_var() {
			return getRuleContexts(Decl_varContext.class);
		}
		public Decl_varContext decl_var(int i) {
			return getRuleContext(Decl_varContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(DecaParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(DecaParser.COMMA, i);
		}
		public List_decl_varContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public List_decl_varContext(ParserRuleContext parent, int invokingState, ListDeclVar l, AbstractIdentifier t) {
			super(parent, invokingState);
			this.l = l;
			this.t = t;
		}
		@Override public int getRuleIndex() { return RULE_list_decl_var; }
	}

	public final List_decl_varContext list_decl_var(ListDeclVar l,AbstractIdentifier t) throws RecognitionException {
		List_decl_varContext _localctx = new List_decl_varContext(_ctx, getState(), l, t);
		enterRule(_localctx, 10, RULE_list_decl_var);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			((List_decl_varContext)_localctx).dv1 = decl_var(_localctx.t);


			        _localctx.l.add(((List_decl_varContext)_localctx).dv1.tree);
			        
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(103);
				match(COMMA);
				setState(104);
				((List_decl_varContext)_localctx).dv2 = decl_var(_localctx.t);

				            _localctx.l.add(((List_decl_varContext)_localctx).dv2.tree);
				        
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Decl_varContext extends ParserRuleContext {
		public AbstractIdentifier t;
		public AbstractDeclVar tree;
		public IdentContext i;
		public ExprContext e;
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public TerminalNode EQUALS() { return getToken(DecaParser.EQUALS, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Decl_varContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Decl_varContext(ParserRuleContext parent, int invokingState, AbstractIdentifier t) {
			super(parent, invokingState);
			this.t = t;
		}
		@Override public int getRuleIndex() { return RULE_decl_var; }
	}

	public final Decl_varContext decl_var(AbstractIdentifier t) throws RecognitionException {
		Decl_varContext _localctx = new Decl_varContext(_ctx, getState(), t);
		enterRule(_localctx, 12, RULE_decl_var);

		            AbstractInitialization initia1;
		        
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			((Decl_varContext)_localctx).i = ident();

			        initia1 = new NoInitialization();
			        
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EQUALS) {
				{
				setState(114);
				match(EQUALS);
				setState(115);
				((Decl_varContext)_localctx).e = expr();

				          initia1 = new Initialization(((Decl_varContext)_localctx).e.tree);
				          
				        
				}
			}


			         ((Decl_varContext)_localctx).tree =  new DeclVar(t, ((Decl_varContext)_localctx).i.tree, initia1);
			          
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class List_instContext extends ParserRuleContext {
		public ListInst tree;
		public InstContext inst;
		public List<InstContext> inst() {
			return getRuleContexts(InstContext.class);
		}
		public InstContext inst(int i) {
			return getRuleContext(InstContext.class,i);
		}
		public List_instContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_inst; }
	}

	public final List_instContext list_inst() throws RecognitionException {
		List_instContext _localctx = new List_instContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_list_inst);

			((List_instContext)_localctx).tree =  new ListInst();

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << FALSE) | (1L << NEW) | (1L << NULL) | (1L << READINT) | (1L << READFLOAT) | (1L << PRINT) | (1L << PRINTLN) | (1L << PRINTLNX) | (1L << PRINTX) | (1L << RETURN) | (1L << THIS) | (1L << TRUE) | (1L << WHILE) | (1L << MINUS) | (1L << OPARENT) | (1L << EXCLAM) | (1L << SEMI) | (1L << IDENT) | (1L << FLOAT) | (1L << INT) | (1L << STRING))) != 0)) {
				{
				{
				setState(122);
				((List_instContext)_localctx).inst = inst();

				    	_localctx.tree.add(((List_instContext)_localctx).inst.tree);
				        
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstContext extends ParserRuleContext {
		public AbstractInst tree;
		public ExprContext e1;
		public List_exprContext list_expr;
		public If_then_elseContext if_then_else;
		public ExprContext condition;
		public List_instContext body;
		public ExprContext expr;
		public TerminalNode SEMI() { return getToken(DecaParser.SEMI, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode PRINT() { return getToken(DecaParser.PRINT, 0); }
		public TerminalNode OPARENT() { return getToken(DecaParser.OPARENT, 0); }
		public List_exprContext list_expr() {
			return getRuleContext(List_exprContext.class,0);
		}
		public TerminalNode CPARENT() { return getToken(DecaParser.CPARENT, 0); }
		public TerminalNode PRINTLN() { return getToken(DecaParser.PRINTLN, 0); }
		public TerminalNode PRINTX() { return getToken(DecaParser.PRINTX, 0); }
		public TerminalNode PRINTLNX() { return getToken(DecaParser.PRINTLNX, 0); }
		public If_then_elseContext if_then_else() {
			return getRuleContext(If_then_elseContext.class,0);
		}
		public TerminalNode WHILE() { return getToken(DecaParser.WHILE, 0); }
		public TerminalNode OBRACE() { return getToken(DecaParser.OBRACE, 0); }
		public TerminalNode CBRACE() { return getToken(DecaParser.CBRACE, 0); }
		public List_instContext list_inst() {
			return getRuleContext(List_instContext.class,0);
		}
		public TerminalNode RETURN() { return getToken(DecaParser.RETURN, 0); }
		public InstContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inst; }
	}

	public final InstContext inst() throws RecognitionException {
		InstContext _localctx = new InstContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_inst);
		try {
			setState(181);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FALSE:
			case NEW:
			case NULL:
			case READINT:
			case READFLOAT:
			case THIS:
			case TRUE:
			case MINUS:
			case OPARENT:
			case EXCLAM:
			case IDENT:
			case FLOAT:
			case INT:
			case STRING:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				((InstContext)_localctx).e1 = expr();
				setState(131);
				match(SEMI);

				            assert(((InstContext)_localctx).e1.tree != null);
				            
				        
				}
				break;
			case SEMI:
				enterOuterAlt(_localctx, 2);
				{
				setState(134);
				match(SEMI);
